<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8FA8F"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#F4F2F8"
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="@font/acme" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"></View>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/match_it_logo" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"></View>

    <Button
        android:id="@+id/playGame"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/play_game"
        android:background="@color/blue" />

</LinearLayout>